--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ body,.wrap{background: url(https://sujini.github.io/english/img/bg_pattern.jpg) 
 
 nav{position: absolute;top:0;left:0;right:0;}
 nav .nav-inner{position: relative;max-width: 1000px;margin: 0 auto;} 
-nav .nav-inner .right{float: right}
+nav .nav-inner .right{position: relative; float: right}
 nav .nav-inner ul.right>li{float: left;}
 nav .nav-inner ul.right>li>a{padding: 4px 15px;border-radius: 20px;margin: 18px 0 0 10px;
   border: 2px solid #8f8f8f;background: #fff;transition: all 0.2s ease-out;-webkit-transition: all 0.2s ease-out;-moz-transition: all 0.2s ease-out;}
@@ -66,7 +66,7 @@ nav .nav-inner .sub-nav{height:0; overflow: hidden;transition: all 0.2s ease-out
   nav .nav-inner .sub-nav li{padding: 7px 7px}
 nav .nav-inner ul.right>li a:hover .sub-nav
 ,nav .nav-inner ul.right>li a.active .sub-nav{height:128px;padding: 10px 0}
-nav h1{position: relative;text-align: center;clear: both;}
+nav h1{position: absolute;left:0;right:0;top:100px;text-align: center;clear: both;}
 img{max-width: 100%;}
 .grammar{
 
@@ -83,13 +83,13 @@ img{max-width: 100%;}
 .card-list .card .card-content .card-inner a{font-size: 19px;font-weight: 800;letter-spacing: -0.6px;}
 .card-list .card .card-content .card-inner span.num{position: absolute;top:25px;left:0;width: 55px;text-align: right; font-size: 20px;font-weight: 800;letter-spacing: -0.6px;}
 .card-list .card .card-content .card-inner p{font-size: 18px;color:#e20000; padding: 12px 0; font-family: 'Gotham Bold';line-height: 24px;letter-spacing: -0.45px;}
-.container{background: url(https://sujini.github.io/english/img/bg_main.jpg) repeat-x center top;}
+.container{background: url(https://sujini.github.io/english/img/bg_main.jpg) repeat-x center top;overflow: hidden;}
 .container.home{min-height: 100vh}
 .container.homework{background-image: url(https://sujini.github.io/english/img/bg_homework.jpg)}
 .container.homework button{margin: 0 10px 15px 0}
-.container .inner{padding: 110px 0 0;max-width: 1000px;margin: 0 auto;}
+.container .inner{padding: 210px 0 0;max-width: 1000px;margin: 0 auto;}
 .container .center{text-align: center}
-.container h1.center{max-width: 85%;margin: 0 auto}
+h1.center{max-width: 85%;margin: 0 auto}
 input[type="text"]{width: 100%;border:0;border-bottom:1px solid #bababa;height: 27px;line-height: 27px;background: transparent;}
 span.numL{background: url(https://sujini.github.io/english/img/num_l.png) no-repeat 50% -90px;text-indent: -9999em;width: 30px;height: 30px;display: inline-block;vertical-align: top; overflow: hidden;}
 span.numL.num1{background-position: 50% 0px}
@@ -137,10 +137,13 @@ span.numS.numR{background-position: 50% -45px}
   .card-list{max-width: 600px;    margin: 0 auto;}
   .card-list .card{width: 100%;padding: 0 10% 10px !important;}
   .container.homework .btn-area{text-align: center}
+  nav .nav-inner ul.right>li a:hover .sub-nav, nav .nav-inner ul.right>li a.active .sub-nav{height: 0;padding: 0}
+  nav .nav-inner ul.right>li a.on .sub-nav{height: 128px;padding: 10px 0}
 }
 
 @media (max-width: 600px) {
-  
+  h1.center{top:65px}
+  .container .inner{padding: 110px 0 0}
   .container.homework h3{padding: 25px 0}
   .container.homework h3 img{max-height: 100%;height: 32px;}
   .container.home p{padding: 25px 0;}
