--- a/src/App.css
+++ b/src/App.css
@@ -78,9 +78,13 @@ img{max-width: 100%;}
 .card-list .card .card-content{border:3px solid #000;box-sizing: border-box;border-radius: 15px;padding: 3px}
 
 .card-list .card .card-content .card-inner{position: relative;border:1px solid #000;box-sizing: border-box;border-radius: 10px;padding: 25px 30px 25px 60px}
-.card-list .card .card-content .card-inner a{font-size: 19px;font-weight: 800;letter-spacing: -0.6px;}
+.card-list .card .card-content .card-inner a{font-size: 19px;font-weight: 800;letter-spacing: -0.6px;box-sizing: border-box;padding: 0 35px 0 0;}
 .card-list .card .card-content .card-inner span.num{position: absolute;top:25px;left:0;width: 55px;text-align: right; font-size: 20px;font-weight: 800;letter-spacing: -0.6px;}
 .card-list .card .card-content .card-inner p{font-size: 18px;color:#e20000; padding: 12px 0; font-family: 'Gotham Bold';line-height: 24px;letter-spacing: -0.45px;}
+.card-list .card .card-content .card-inner input[type="checkbox"]{position: absolute;top:10px;right:10px;border: 0;-webkit-appearance: none;}
+.card-list .card .card-content .card-inner input[type="checkbox"]:before{content:'';display: block; width:39px;height:39px;background:url('/img/ico_check.png') no-repeat center top;}
+.card-list .card .card-content .card-inner input[type="checkbox"]:checked:before{content:'';display: block; width:39px;height:39px;background-image:url('/img/ico_check_on.png')}
+
 .container{background: url(https://sujini.github.io/english/img/bg_main.jpg) repeat-x center top;overflow: hidden;}
 .container.home{min-height: 100vh}
 .container.homework{background-image: url(https://sujini.github.io/english/img/bg_homework.jpg)}
@@ -142,7 +146,7 @@ span.numS.numR{background-position: 50% -90px}
   .card-list .card{width: 100%;padding: 0 10% 10px !important;}
   .container.homework .btn-area{text-align: center}
   nav .nav-inner ul.right>li:hover .sub-nav, nav .nav-inner ul.right>li.active .sub-nav{height: 0;padding: 0}
-  nav .nav-inner ul.right>li a.on+.sub-nav{height: 128px;padding: 10px 0}
+  nav .nav-inner ul.right>li a.on+.sub-nav{height: 100%;padding: 10px 0}
 }
 
 @media (max-width: 600px) {
@@ -154,11 +158,14 @@ span.numS.numR{background-position: 50% -90px}
   .container.home p img{max-height: 100%;height: 32px;}
   
   .container.homework .btn-area button{margin: 0 5px 15px;width: 120px;}
-  span.numL{background-size: 20px 80px;background-position: 50% -60px;width: 20px;height: 20px;}
+  span.numL{background-size: 20px 140px;background-position: 50% -120px;width: 20px;height: 20px;}
   span.numL.num1{background-position: 50% 0px}
   span.numL.num2{background-position: 50% -20px}
   span.numL.num3{background-position: 50% -40px}
-  span.numL.numR{background-position: 50% -60px}
+  span.numL.num4{background-position: 50% -60px}
+  span.numL.num5{background-position: 50% -80px}
+  span.numL.num6{background-position: 50% -100px}
+  span.numL.numR{background-position: 50% -120px}
   .container.home ul li a{padding: 15px 70px;}
   .container.home ul li a img{max-height: 100%;height: 20px;}
   .card-list .card .card-content .card-inner{padding: 15px 15px 15px 35px}
